# ag32-hal

./: .gitignore  Cargo.toml  README.md  build.rs  generate-pac.sh  memory.x  rust-toolchain.toml  settings.yaml
examples/ag32vf303/: Cargo.toml  Embed.toml  build.rs
examples/ag32vf303/.cargo/: config.toml
examples/ag32vf303/src/: main.rs
flash/: Cargo.toml  build.rs  template.yaml
flash/.cargo/: config.toml
flash/src/: main.rs
pac/: Cargo.toml
src/: lib.rs  rcc.rs
svd/: patch.yaml
