[workspace]
default-members = ["."]
members = [".", "pac"]

[package]
name = "ag32-hal"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
ag32-pac = { path = "pac" }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
critical-section = "1.2"
defmt = { version = "1.0", optional = true }
embassy-hal-internal = "0.3"
embassy-sync = "0.7"
embassy-futures = "0.1"
embassy-time-queue-utils = "0.3"
embassy-time-driver = "0.2"
embassy-time = "0.5"
embassy-usb-driver = "0.2"
nb = "1.1.0"
embedded-hal-nb = "1.0.0"
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
itertools = "0.14"

[features]
default = ["rt"]
rt = ["ag32-pac/rt", "ag32-pac/critical-section"]
defmt = ["dep:defmt"]

[profile.dev]
opt-level = 's'

[profile.release]
strip = false
opt-level = 'z'
codegen-units = 1
lto = 'fat'
debug = 2
