[package]
name = "ag32-flash"
version = "0.1.0"
edition = "2024"

[dependencies]
ag32-pac = { path = "../pac" }
riscv = { version = "0.15", features = ["critical-section-single-hart"] }
panic-halt = { version = "1.0", optional = true }
rtt-target = { version = "0.6", optional = true }

[dependencies.flash-algorithm]
git = "https://github.com/probe-rs/flash-algorithm.git"
rev = "32361889e1241498194eea4b6c3e1c8610fee956"
default-features = false
features = ["erase-chip", "verify"]

[features]
default = ["no-rtt", "dma"]
no-rtt = ["dep:panic-halt"]
rtt = ["dep:rtt-target", "flash-algorithm/panic-handler"]
dma = []
blank-check = ["flash-algorithm/blank-check"]

[profile.dev]
opt-level = 's'

[profile.release]
strip = false
opt-level = 'z'
codegen-units = 1
lto = 'fat'
debug = 2

[workspace] # to prevent being included in outer workspace, as it has a conflicting `memory.x`
