[package]
name = "ag32-pac"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = { version = "1.0", optional = true }
riscv = "0.15"
riscv-peripheral = "0.4"
riscv-rt = { version = "0.16", features = ["single-hart"], optional = true }
vcell = "0.1"

[features]
rt = ["riscv-rt"]
v-trap = ["rt", "riscv-rt/v-trap"]
