[package]
name = "ag32vf303"
version = "0.1.0"
edition = "2024"

[dependencies]
ag32-hal = { path = "../.." }
riscv = { version = "0.15", features = ["critical-section-single-hart"] }
riscv-rt = "0.16"
embedded-hal = "1.0"
embassy-executor = { version = "0.9", features = [
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = "0.5"
embassy-futures = "0.1"
heapless = "0.9"
defmt = "1.0"
rtt-target = { version = "0.6", features = ["defmt"] }
panic-rtt-target = "0.2"
